@@ -24,9 +24,13 @@ specially crafted WML taking that into account, beware.
 If the mvt animations seem to "jump around" on slow or fast computers, please report
 to Boucman
 
+Recruitment OOS is fatal now.
+
 MP random improvements:
 There is a new rand key for [set_variable] this is MP save, only the WML author
 has to make sure it stays in sync see:
 http://www.wesnoth.org/wiki/BuildingMultiplayerExamples#Random
 
 Units spawned in events can now have random_traits and also the names stay in sync.
+
+
